<resources>
    <string name="app_name">killbill</string>
    <string name="Allow_Permissions">Allow Listening Permissions</string>
    <string name="Add_Bill">Adding</string>
    <string name="Set_for_app">Setting</string>
    <string name="menu_cancal">Cancel</string>
    <string name="save_card">Save</string>
    <string name="Add_card">Adding</string>
    <string name="Delete_card">Delete</string>
    <string name="notification_title">KillBill Auto-Accounting</string>
    <string name="notification_message">Processing Your Transactions Automatically…</string>
    <string name="notification_status">Working in the background</string>
    <string name="Bill_button">Bill</string>
    <string name="Statistic_button">Statistic</string>
    <string name="Setting_button">List</string>
    <string name="Add_card_context">This is the detailed content…</string>
    <string name="Add_card_time_hint">Time</string>
    <string name="Add_card_title_hint">Amount of Money</string>
    <string name="Add_card_context_hint">Notes</string>
    <string name="pie_chart_title">Expenditure Category</string>
    <string name="legend_title">Explanation</string>
    <string name="statistic_title">Cost Statistic</string>
    <string name="empty_title">NO Consumption Records for this Month</string>
    <string name="change_language">change language</string>
    <string name="consumption_statistics">Consumption statistics for %1$s month</string>
    <string name="catering">catering</string>
    <string name="dailyuse">Daily use</string>
    <string name="transportation">Transportation</string>
    <string name="learning">Learning</string>
    <string name="education">Education</string>
    <string name="medical">Medical</string>
    <string name="entertainment">Entertainment</string>
    <string name="shopping">Shopping</string>
    <string name="Else">else</string>
    <string name="emptyAccount">No Consumption Records for this Month</string>
    <string name="total_expense_format">Total Expense: %.2f Yuan</string>
    <string name="date_format">%1$d / %2$d / %3$d</string>



</resources>